// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render 1`] = `
<div>
  <div
    class="avatar"
  >
    Identicon
  </div>
</div>
`;

exports[`Avatar should render full DID avatar style 1`] = `
<div>
  <div
    class="avatar fullDid"
  >
    Identicon
  </div>
</div>
`;
